testing/testing-dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: myapp
  namespace: test
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
  replicas: 2
  test: false
  selector:
    deployment-config.name: myapp
  template:
    metadata:
      labels:
        deployment-config.name: myapp
    spec:
      containers:
        - name: default-container
          image: '172.30.253.239:5000/development/myapp:promoteToQA'
          resources: {}
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
