testing/testing-route.yml
apiVersion: v1
kind: Route
metadata:
  name: myapp
  namespace: test
spec:
  host: myapp-test.cloudapps.example.com
  to:
    kind: Service
    name: myapp
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
